changed footer color to blue

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
             font-weight: bold;
             cursor: pointer;
         }
+        .foot{
+            background-color:blue;
+        }
         
         .close:hover,
         .close:focus {
@@ -252,7 +255,7 @@
         </div>
     </main>
 
-    <footer>
+    <footer id="foot">
         <h3>About Our Company</h3>
         <p>We are a forward-thinking technology company dedicated to creating innovative solutions for businesses worldwide.</p>
         <p>Contact: growth_flex@gmail.com | Phone: (+91) 456-7890</p>
