--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
         
         header {
-            background-color: var(--primary-color);
+            background-color: orange;
             padding: 1rem;
             display: flex;
             justify-content: space-between;
@@ -60,7 +60,7 @@
             color: var(--light-text-color);
             padding: 0.5rem 1rem;
             border-radius: 4px;
-            transition: background-color 0.3s;
+            transition: background-color 0.4s;
         }
         
         nav a:hover {
