--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         .logo {
             font-size: 1.5rem;
             font-weight: bold;
-            color: var(--light-text-color);
+            color: blue;
             display: flex;
             align-items: center;
             margin-right: 1rem;
