--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="card-name">VIVEK DEVERAKONDA</div>
                 <div class="card-content">
                     <p><strong>CTO & Co-founder</strong></p>
-                    <p>Vivek is a tech visionary with a background in computer science and artificial intelligence.</p>
+                    <p>Vivek is a tech visionary with a background in computer science and Web Development.</p>
                 </div>
             </div>
             <div class="card" data-founder="third">
