--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <h3>About Our Company</h3>
         <p>We are a forward-thinking technology company dedicated to creating innovative solutions for businesses worldwide.</p>
         <p>Contact: growth_flex@gmail.com | Phone: (+91) 456-7890</p>
-        <p>Address: Silicon Tech Street, Silicon Valley, CA 94000</p>
+        <p>Address: golden food Street, Silicon Valley, CA 94000</p>
     </footer>
 
     <!-- Modal -->
